# Stock-Financial-Analysis-Library

./: .gitignore  =0.2.36  CHANGELOG.md  LICENSE  all_function_demo.py  prompt模板.txt  pyproject.toml  readme.md  report.txt  requirements.txt  setup.py  test_mcp_server.py  架构图.md  架构图_ASCII.md
.claude/: settings.local.json
.trae/documents/: plan_20251230_130529.md  plan_20251230_132243.md  优化测试文件和分析函数以避免API速率限制.md  创建全面详细的README文件.md  将代码转化为Python库的计划.md
docs/: PROJECT_STRUCTURE.md  REFACTORING_SUMMARY.md  report_header.txt
examples/: README.md  parallel_workflow.py  quick_test.py
reports/600519/: 600519_cashflow_report.txt  600519_dupont_report.txt  600519_full_report.txt  600519_profitability_report.txt  600519_risk_report.txt  600519_valuation_report.txt
src/MCP/: server.py  server_simple.py  stock_mcp_config.json  test_fastmcp.py  test_server.py  test_tools.py
src/langchain_tools/: finance_agent_debug.py  finance_reasch_agent.py  mcp_server_debug.py  simple_mcp_test.py  test_simple_server.py
src/stock_tool/: AltmanZScore.py  BeneishMScore.py  CashFlowAnalysis.py  DuPontAnalysis.py  ProfitabilityAnalysis.py  ValuationRatios.py  __init__.py  check_benford.py  get_report_data.py  get_stock_data.py  translation_map_asset.json  translation_map_cashflow.json  translation_map_income.json
src/stocking.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: README_测试说明.md  test.py  test_all.py  test_get_report.py
